api key security enable
